--- a/complaint.html
+++ b/complaint.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
     <body>
+        <h2>Send Complaints</h2>
         <form action = "set.php" method="POST">
             Name: <input type="text" name = "name">
             <br/>
@@ -10,5 +14,6 @@
             <br>
             <button type="submit" >SUBMIT</button>
         </form>
+        Are you an admin? <a href = "adminLogin.php" >Go to the admin page</a>
     </body>
 </html>
